spectec/test/interp/neg/call-non-function.imp
// Cannot call an int as if it were a function.
int x = 1;
int r = x(2)
